# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  a.out  check.c  determine_function.c  digits_precision.c  flags.c  ft_itoa.c  ft_printf  ft_printf.h  ft_printuntil.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strlen.c  ft_strnew.c  homework  int.c  length.c  main.c  man_printf  path.c  path_check.c  pick_f_base.c  pick_f_c.c  pick_f_p.c  pick_f_percent.c  pick_f_u_int.c  pick_f_w.c  pick_f_x.c  precision.c  string.c  test3  testprintf.c  to_base.c  void.c
Checker/: check.c  conversion_check.c  path_check.c
libft/: Makefile
libft/includes/: libft.h
libft/srcs/: ft_bzero.c  ft_isalnum.c  ft_itoa.c  ft_lstadd.c  ft_lstaddend.c  ft_lstat.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_lstsize.c  ft_max.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memmove.c  ft_min.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstr_wchar.c  ft_puttab.c  ft_straddend.c  ft_strchr.c  ft_strclr.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strjoinch.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  (+10 more)
make/: Makefile
make_42check/: Makefile
